# poc-telemetria-hp

./: .gitignore  Install.md  README.md  instructions.md  pyproject.toml  requirements.txt
airflow/.astro/: test_dag_integrity_default.py
airflow/bkp/: airbyte-test.py  teste2.py
airflow/dags/: dag-telemetria.py  pipeline_hp_dados_escala.py  pipeline_hp_dados_linha.py  pipeline_hp_telemetics.py  pipeline_hp_telemetics_orig.py
airflow/tests/: test_authentication.py
bkp/: example_dag_advanced.py  teste_dag.py
dbt/bkp/: aggr_operation_day.sql  idle_route.sql  made_route.sql  schedule_operation.sql
dbt/poc_hp_dbt/: dbt_project.yml
dbt/poc_hp_dbt/models/: geodata-raw.sql  gld_idle_route.sql  schema.yml  slv_geo_linhas.sql  slv_identity_idle_line.sql  slv_made_trip.sql  slv_schedule.sql  sources.yml  (+1 more)
notebooks/: .env  engine-01.ipynb  engine-02.ipynb  engine.ipynb  engine_3.ipynb  idle_route.csv  importação.ipynb  info.txt  line_401_sample_data.csv  made_trip.csv  main-engine.ipynb  main.ipynb  map_20018.html  map_20019.html  map_20021.html  map_20048.html  map_20224.html  map_20238.html  map_20357.html  map_20360.html  map_20362.html  map_20805.html  phase1.ipynb  schedule.csv
notebooks/bkp/: eda.ipynb  engine-01.ipynb  importação.ipynb  main-engine.ipynb
notebooks/dados/: 20224.kml  911 V2.kml  911.kml
notebooks/src/: map_20018.html  map_20019.html  map_20021.html  map_20048.html  map_20224.html  map_20238.html  map_20357.html  map_20360.html  map_20362.html
postgres/: docker-compose.yml
utils/: connections.py
utils/tests/: test_authentication.py
(+2 files in other folders)
