[tool.poetry]
name = "poc-telemetria-hp"
version = "0.1.0"
description = ""
authors = ["marcelopborges <54992376+marcelopborges@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
